# sii_chile_xml_to_pdf

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  script_convierte_xml.py  script_obtiene_excel.py  xml_to_pdf_functions.py
.github/workflows/: docker-publish.yml
DTE/: DTE.py
examples/input/: T33_factura_ejemplo_1.xml  T33_factura_ejemplo_3.xml  T33_factura_ejemplo_4.xml
input/: T33_factura_ejemplo_2.xml  T33_factura_ejemplo_3.xml
output/: listado_xml.xlsx
output/pdf/: README.md
src/service/: config.py  jobs.py  main.py
src/sii_xml_pdf/: barcode.py  cli.py  formatting.py  models.py  ns.py  parser.py  renderer.py
src/sii_xml_pdf/templates/: invoice.css  invoice.html  invoice_backup.css
templates/: invoice.css  invoice.html
